# raytracer

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
bench/: CMakeLists.txt
bench/src/: bench_intersection.cpp  bench_rendering.cpp  divider_bench.cpp  vector_bench.cpp
src/: CMakeLists.txt  main.cpp  main.h
src/camera/: CMakeLists.txt  camera.cpp  camera.h
src/division/: division.cpp  division.h
src/image/: CMakeLists.txt  image.cpp  image.h  texture.cpp
src/light/: CMakeLists.txt  light.cpp  light.h
src/object/: CMakeLists.txt  object.cpp  object.h  texture.h
src/ray/: ray.h
src/renderer/: CMakeLists.txt  renderer.cpp  renderer.h  scene.h
src/scene/: CMakeLists.txt  scene.cpp  scene.h
src/texture/: CMakeLists.txt  texture.cpp
src/vector/: CMakeLists.txt  vector.cpp  vector.h
test/: CMakeLists.txt
test/src/: divider_tests.cpp
